<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dev.jfxde</groupId>
	<artifactId>dev.jfxde.parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>dev.jfxde.api</module>
		<module>dev.jfxde.data</module>
		<module>dev.jfxde.logic</module>
		<module>dev.jfxde.fonts</module>
		<module>dev.jfxde.jfxext</module>
		<module>dev.jfxde.ui</module>
		<module>dev.jfxde.sysapps</module>
		<module>dev.jfxde.apps</module>
		<module>dev.jfxde.demos</module>
		<module>dev.jfxde.image</module>
		<module>dev.jfxde.distribution</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<ojfxVersion>13.0.1</ojfxVersion>
		<picocliVersion>4.0.4</picocliVersion>
		<javafx.platform>win</javafx.platform>
		<scriptExtension>bat</scriptExtension>
		<pathSeparator>;</pathSeparator>
		<osHomeDir>"%HOME%"</osHomeDir>
		<distFormat>zip</distFormat>
		<sourceJdkModules>${java.home}</sourceJdkModules>
		<sysName>jfxde</sysName>
		<distName>${sysName}-${project.version}</distName>
		<homeDir>.${sysName}/${project.version}</homeDir>
		<logDir>log</logDir>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-base</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-graphics</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-media</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-web</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-fxml</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-swing</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.controlsfx</groupId>
				<artifactId>controlsfx</artifactId>
				<version>12.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.github.javaparser</groupId>
				<artifactId>javaparser-symbol-solver-core</artifactId>
				<version>3.14.159265359</version>
			</dependency>
			<dependency>
				<groupId>info.picocli</groupId>
				<artifactId>picocli</artifactId>
				<version>${picocliVersion}</version>
			</dependency>
			<dependency>
				<groupId>one.microstream</groupId>
				<artifactId>storage.embedded</artifactId>
				<version>02.00.00-MS-GA</version>
			</dependency>
			<dependency>
				<groupId>org.fxmisc.richtext</groupId>
				<artifactId>richtextfx</artifactId>
				<version>0.10.2</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse</groupId>
				<artifactId>yasson</artifactId>
				<version>1.0.5</version>
			</dependency>
			<dependency>
				<groupId>dev.jfxde</groupId>
				<artifactId>dev.jfxde.api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.jfxde</groupId>
				<artifactId>dev.jfxde.logic</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.jfxde</groupId>
				<artifactId>dev.jfxde.fonts</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.jfxde</groupId>
				<artifactId>dev.jfxde.jfxext</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.jfxde</groupId>
				<artifactId>dev.jfxde.ui</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.jfxde</groupId>
				<artifactId>dev.jfxde.data</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.jfxde</groupId>
				<artifactId>dev.jfxde.sysapps</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.jfxde</groupId>
				<artifactId>dev.jfxde.apps</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.jfxde</groupId>
				<artifactId>dev.jfxde.demos</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>5.5.1</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<release>12</release>
						<annotationProcessorPaths>
							<path>
								<groupId>info.picocli</groupId>
								<artifactId>picocli-codegen</artifactId>
								<version>${picocliVersion}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.1.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jlink-plugin</artifactId>
					<version>3.0.0-alpha-2-SNAPSHOT</version>
					<extensions>true</extensions>
					<configuration>
						<!-- configuration elements goes here -->
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>templating-maven-plugin</artifactId>
					<version>1.0.0</version>
					<executions>
						<execution>
							<id>filter-src</id>
							<goals>
								<goal>filter-sources</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>linux</id>
			<!-- <activation> -->
			<!-- <os> -->
			<!-- <name>linux</name> -->
			<!-- </os> -->
			<!-- </activation> -->
			<properties>
				<javafx.platform>linux</javafx.platform>
				<sourceJdkModules>${env.JAVA_HOME_LINUX}</sourceJdkModules>
				<scriptExtension>sh</scriptExtension>
				<pathSeparator>:</pathSeparator>
				<osHomeDir>~</osHomeDir>
				<distFormat>tgz</distFormat>
			</properties>
		</profile>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<name>mac os x</name>
				</os>
			</activation>
			<properties>
				<javafx.platform>mac</javafx.platform>
			</properties>
		</profile>
		<profile>
			<id>windows</id>
			<!-- <activation> -->
			<!-- <os> -->
			<!-- <family>windows</family> -->
			<!-- </os> -->
			<!-- </activation> -->
			<properties>
				<javafx.platform>win</javafx.platform>
				<pathSeparator>;</pathSeparator>
				<osHomeDir>"%HOME%"</osHomeDir>
			</properties>
		</profile>
		<profile>
			<id>javafx.platform.custom</id>
			<activation>
				<property>
					<name>javafx.platform</name>
				</property>
			</activation>
			<properties>
				<javafx.platform>${javafx.platform}</javafx.platform>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>sonatype.snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>microstream-releases</id>
			<url>https://repo.microstream.one/repository/maven-public/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>apache.snapshots</id>
			<url>http://repository.apache.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>